cabal-version:       3.4

name:                zokka-custom-package-repository-server
version:             1.0.0.0
synopsis:            Haskell Server
description:
category:            Web
build-type:          Simple

Common package-repository-server-common
  other-modules:      
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       text,
                       containers,
                       transformers,
                       scotty,
                       wai,
                       wai-extra,
                       warp,
                       sqlite-simple,
                       bytestring,
                       http-conduit,
                       http-types,
                       argon2,
                       entropy,
                       base64-bytestring,
                       SHA,
                       optparse-applicative,
                       wai-middleware-static,
                       wai-cors,
                       filepath
  hs-source-dirs:      src
  default-language:    Haskell2010

Executable package-repository-server
  import:              package-repository-server-common
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
